[package]
name = "delax"
version = "0.1.0"
edition = "2021"
authors = ["Ava Wallenfang <ava@wallenfang.de>"]
license = "MIT"
homepage = "https://ritzin.dev"
description = "A delay plugin with a few bells and whistles"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false,  features = ["assert_process_allocs", "standalone"] }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
